Bugfix: on narrow display the primary submenu no longer pops down on hover.

--- a/digipal/static/css/dpbase.less
+++ b/digipal/static/css/dpbase.less
@@ -684,7 +684,7 @@ different height depending when they are selected and push the other values down
     font-weight: normal;
 }
 
-.btn-primary .auto-open-wide:hover > ul.dropdown-menu {
+.auto-open-wide:hover > ul.dropdown-menu {
     @media (min-width: @grid-float-breakpoint) {
         display: block;
     }
